# substrate-bitcoin

./: README.md  spec.json
.github/workflows/: mdbook.yml
docs/: demo-usage.md  faq.md  how-to-run-the-node.md
docs/pow/: code-breakdown.md  pow.md
docs/utxo/: code-breakdown.md  utxo.md
node/src/: chain_spec.rs
runtime/src/: lib.rs  utxo.rs
scripts/generate-signature/: generate-signature.js  package-lock.json  package.json
tutorial-book/: README.md  book.toml
tutorial-book/src/: SUMMARY.md
tutorial-book/src/0/source/: README.md
tutorial-book/src/1/: README.md
tutorial-book/src/1/source/: README.md  changes.diff
tutorial-book/src/1/source/multi-pow/src/: lib.rs
tutorial-book/src/1/source/node/src/: chain_spec.rs  command.rs  service.rs
tutorial-book/src/1/source/runtime/src/: block_author.rs  difficulty.rs  issuance.rs  lib.rs  utxo.rs
tutorial-book/src/10/: README.md
tutorial-book/src/10/source/: README.md  changes.diff
tutorial-book/src/10/source/runtime/: Cargo.toml
tutorial-book/src/11/: README.md
tutorial-book/src/11/source/: README.md  changes.diff
tutorial-book/src/11/source/node/src/: service.rs
tutorial-book/src/12/source/: README.md
tutorial-book/src/12/source/runtime/src/: lib.rs
tutorial-book/src/12/source/scripts/generate-signature/: index.js  package-lock.json  package.json
tutorial-book/src/2/: README.md
tutorial-book/src/2/source/: README.md  changes.diff
tutorial-book/src/2/source/runtime/src/: utxo.rs
tutorial-book/src/3/source/: README.md
tutorial-book/src/4/solution/: solution.diff  spec.json
tutorial-book/src/4/solution/runtime/src/: block_author.rs  utxo.rs
tutorial-book/src/4/template/: README.md  template.diff
tutorial-book/src/4/template/multi-pow/: Cargo.toml
tutorial-book/src/4/template/node/: Cargo.toml
tutorial-book/src/4/template/runtime/src/: utxo.rs
tutorial-book/src/5/solution/: README.md  solution.diff
tutorial-book/src/5/solution/node/src/: command.rs
tutorial-book/src/5/solution/runtime/src/: utxo.rs
tutorial-book/src/5/template/: template.diff
tutorial-book/src/5/template/node/src/: chain_spec.rs
tutorial-book/src/5/template/runtime/src/: utxo.rs
tutorial-book/src/6/: README.md
tutorial-book/src/6/solution/: README.md  solution.diff
tutorial-book/src/6/template/: .gitignore  template.diff
tutorial-book/src/6/template/node/src/: cli.rs
tutorial-book/src/6/template/runtime/src/: difficulty.rs  lib.rs  utxo.rs
tutorial-book/src/7/: README.md
tutorial-book/src/7/solution/: solution.diff
tutorial-book/src/7/template/: README.md  template.diff
tutorial-book/src/7/template/runtime/src/: lib.rs  utxo.rs
tutorial-book/src/8/: README.md
tutorial-book/src/8/solution/: README.md  solution.diff
tutorial-book/src/8/solution/node/src/: rpc.rs
tutorial-book/src/8/solution/runtime/src/: issuance.rs  utxo.rs
tutorial-book/src/8/template/: Cargo.toml  template.diff
tutorial-book/src/8/template/node/src/: chain_spec.rs
tutorial-book/src/8/template/runtime/src/: utxo.rs
tutorial-book/src/9/source/: README.md
tutorial-book/src/9/source/multi-pow/src/: lib.rs
tutorial-book/src/9/source/node/src/: chain_spec.rs
